KeepScreenOn = true and implement onPause

--- a/Stopwatch/app/src/main/res/layout/activity_main.xml
+++ b/Stopwatch/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    android:keepScreenOn="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
